feat > criando nova suite de testes de aplicacao, adicionando ajustes de tempo de execucao e valor padrao em DTO de response

--- a/RiskAnalisys.Tests/RiskAnalisys.Tests.csproj
+++ b/RiskAnalisys.Tests/RiskAnalisys.Tests.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RiskAnalisys.Domain\RiskAnalisys.Domain.csproj" />
+    <ProjectReference Include="..\RiskAnalisys.Application\RiskAnalisys.Application.csproj" />
   </ItemGroup>
 
 </Project>
