feat > criacao de testes de integracao

--- a/RiskAnalisys.API/RiskAnalisys.API.csproj
+++ b/RiskAnalisys.API/RiskAnalisys.API.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\RiskAnalisys.Infrastructure\RiskAnalisys.Infrastructure.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="RiskAnalisys.Tests.IntegrationTests" />
+	</ItemGroup>
+
 </Project>
